--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@testing-library/dom": "^8.1.0",
     "babel-jest": "^26.6.3",
     "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^3.11.0",
